fix: flex-wrap:wrap  pour la div de liens des pages des membres

--- a/src/app/page-membres-detail/page-membres-detail.component.css
+++ b/src/app/page-membres-detail/page-membres-detail.component.css
@@ -148,6 +148,8 @@ div.member-reseaux {
     background-color: var(--website-bg-color-light-1);
     border-radius: 10px;
     padding: 10px;
+    margin: 0 2vw;
+    flex-wrap: wrap;
     
 }
 
